--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .conteudo-todo{
-  background-color: orange;
+  /* background-color: orange; */
 
   display: flex;
   flex-direction: column;
@@ -7,4 +7,6 @@
   height: 100vh;
   margin: 0px;
   padding: 0px;
+
+  /* color: rgb(190, 190, 198); */
 }
